# mma

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  README.md  docker-compose.e2e.dev.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-sidecar.yml  claude-issues.yml  copyright-release.yml  e2e.yml  lint.yml  plugins.yml  release.yml  update-manual.yml  vision-release.yml
.husky/: pre-commit
app/: .gitignore  .prettierignore  .prettierrc  eslint.config.js  package-lock.json  package.json  speed-matrix.txt  vite.config.ts  wdio.conf.ts  wdio.perf.conf.ts
app/public/opensv/: opensv.js
app/public/valig/assets/: index-1I1WKNJN.css
app/scripts/: gen-image-dims.mjs
app/src/: App.tsx  api.ts  bindings.gen.ts  main.tsx  styles.css
app/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/crates/tauri-plugin-webserve/src/: bootstrap.js  lib.rs
app/src-tauri/src/: arrow_bridge.rs  arrow_bridge.test.rs  arrow_migrate.rs  arrow_migrate.test.rs  borders.rs  borders.test.rs  export.rs  export.test.rs  fast_io.rs  fast_io.test.rs  geocoder.rs  import.rs  import.test.rs  lib.rs  location_store.rs  location_store.test.rs  main.rs  map_meta.rs  plugins.rs  plugins.test.rs  review.rs  review.test.rs  seen.rs  selections.rs  selections.test.rs  serve.rs  sidecar.rs  spatial.rs  spatial.test.rs  storage.rs  storage.test.rs  types.rs  types.test.rs  util.rs  util.test.rs  vcs.rs  vcs_delta.rs  vcs_delta.test.rs
app/src/components/dialogs/: ApplyFieldAsTagsDialog.tsx  BulkOperationModal.tsx  DatabaseManager.add.tsx  ExportDialog.tsx  Guide.add.tsx  ImportDialog.tsx  ManageFieldsModal.tsx  Manual.add.tsx  MergeDuplicatesModal.tsx  PluginMarketplace.tsx  RandomPickModal.add.tsx  RandomPickModal.tsx  ReviewSessions.add.tsx  ReviewSessions.tsx  SeenDialog.add.tsx  SeenDialog.tsx  SettingsPage.add.tsx  SettingsPage.tsx  StatsForNerds.add.tsx  StatsForNerds.tsx  ValidationDialog.tsx  VersionHistory.add.tsx  manual.add.css
app/src/components/editor/: CommandPalette.tsx  CopyToMapDialog.tsx  MapEditor.tsx  MapRenameForm.tsx  PluginSidebarHost.tsx  PolygonTools.tsx  QuickCopyToMapDialog.tsx  SameLocation.add.tsx  SameLocation.tsx  TagManager.tsx  TagTree.add.tsx  TagTree.tsx
app/src/components/manual/: Manual.tsx  ManualSearch.tsx  chapters.ts  components.tsx  manual-img-dims.gen.ts  manual.css  search.ts  searchRank.ts
app/src/components/map-list/: MapList.tsx
app/src/components/primitives/: ColorPicker.tsx  DatePicker.tsx  Dialog.tsx  Icon.tsx  ScopeSelector.tsx  Sidebar.tsx  SuggestInput.tsx  Toast.add.tsx
app/src/lib/: commands.ts  events.ts  testApi.add.ts  window.ts
app/src/lib/data/: fieldDefRegistry.ts  fieldDefs.add.ts  fieldDefs.ts  fieldOps.add.ts  fieldOps.ts  importExport.ts
app/src/lib/geo/: mapStack.ts  (+3 more)
app/src/plugins/: PluginPanels.tsx  externals.ts  index.ts  registry.ts
app/src/store/: commandDefs.add.ts  commandDefs.ts  commands.ts  mapEmbedPrefs.ts  router.ts  savedSelections.add.ts  savedSelections.ts  selections.ts  session.ts  settings.add.ts  settings.ts  useMapStore.ts
app/src/types/: google-maps.d.ts  index.ts  util.ts
app/test/: tsconfig.json
app/test/e2e/: active-location.test.ts  benchmarks.test.ts  bounds-cache.test.ts  bulk-import-rust.test.ts  bulk-operations.test.ts  data-integrity.test.ts  dirty-tracking.test.ts  duplicate-detection.test.ts  enrichment.test.ts  export-dialog.test.ts  extra-fields.test.ts  helpers.ts  import-errors.test.ts  import-export.test.ts  import-parser-regression.test.ts  location-preview.test.ts  locations.test.ts  map-management.test.ts  map-metadata.test.ts  map-operations.test.ts  merge-duplicates.test.ts  multi-map-isolation.test.ts  multi-map.test.ts  perf-import.test.ts  perf-sel.test.ts  review-mode.test.ts  same-location.test.ts  scratch.test.ts  seen.test.ts  selection-composition.test.ts  selection-mutations.test.ts  selections.test.ts  speed-matrix.test.ts  storage-fidelity.test.ts  storage-stress.test.ts  tag-operations.test.ts  tags.test.ts  ui-keyboard.test.ts  ui-map-list.test.ts  ui-sidebar.test.ts  (+6 more)
app/test/unit/: buildSceneLayers.test.ts  cameraType.test.ts  cellManager.test.ts  color.test.ts  date.test.ts  disambiguate.test.ts  emitBitmask.test.ts  enrich.test.ts  enrichmentProviders.test.ts  events.test.ts  extraMergePatch.test.ts  fieldDefRegistry.test.ts  fieldOps.test.ts  generator.test.ts  getMetadataProto.test.ts  gradient.test.ts  hotkeys.test.ts  importExport.test.ts  lookup.test.ts  mapClick.test.ts  mapHost.test.ts  mapKeyBindings.test.ts  mergePatches.test.ts  pivot.test.ts  pluginSidebarHost.test.tsx  pluginState.test.ts  pluginUpdate.test.ts  renderAssurance.test.ts  review.test.ts  savedSelections.test.ts  searchRank.test.ts  selections.test.ts  svMockProto.test.ts  svResolvers.test.ts  tagTreeRange.test.ts  useAsync.test.ts  util.test.ts  validate.test.ts  virtualLocation.test.ts
data/borders/: borders-adm1.json
plugins/: README.md  generate-registry.js  registry.json
plugins/copyright/: index.js  manifest.json
plugins/copyright/sidecar/: Cargo.toml  export_models.py
plugins/copyright/sidecar/src/: detect.rs  detect.test.rs
plugins/copyright/src/: index.ts
plugins/heatmap/: index.js
plugins/heatmap/src/: HeatmapSidebar.tsx  heatmap.ts
plugins/inaturalist/: index.js
plugins/inaturalist/src/: INatSidebar.tsx  TaxonomySorter.tsx  taxonomy.ts
plugins/sample/: manifest.json  package.json  tsconfig.json
plugins/sample/src/: index.ts
plugins/sunPosition/src/: index.ts
plugins/types/: entrypoint.ts  generate.js  mma.d.ts  package.json
plugins/vision/: build.js  index.js  manifest.json  package-lock.json  package.json
plugins/vision-sidecar/: Cargo.toml  export_models.py
plugins/vision-sidecar/.cargo/: config.toml
plugins/vision-sidecar/src/: embed.rs  fetch.rs  main.rs  project.rs  search.rs
plugins/vision/src/: FindSimilarButton.tsx  VisionSidebar.tsx  index.tsx  sidecar.ts
plugins/weather/src/: index.ts
scripts/: docker-e2e.sh  e2e-build.sh  e2e-scratch.sh  e2e.sh
(+113 files in other folders)
