[package]
name = "map-making-app"
version = "0.3.1"
description = "Local map-making.app clone"
authors = ["ccmdi"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
simd-json = "0.14"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rmp-serde = "1"
sha2 = "0.10"
rayon = "1.10"
arrow = { version = "54", features = ["ipc"] }
tokio = { version = "1", features = ["rt"] }
zip = "2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reverse_geocoder = "4"
memmap2 = "0.9"
bytes = "1.9"
reqwest = { version = "0.13", features = ["blocking", "native-tls"] }
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "0.0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[features]
e2e = ["tauri-plugin-webdriver"]

[dependencies.tauri-plugin-webdriver]
version = "0.2"
optional = true
