[package]
name = "map-making-app"
version = "0.6.6"
description = "Local map-making.app clone"
authors = ["ccmdi"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

default-run = "map-making-app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rmp-serde = "1"
sha2 = "0.10"
chrono = "0.4"
chrono-tz = "0.10"
rayon = "1.10"
roaring = "0.10"
arrow = { version = "54", features = ["ipc"] }
bitflags = "2"
tokio = { version = "1", features = ["rt"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reverse_geocoder = "4"
memmap2 = "0.9"
bytes = "1.9"
percent-encoding = "2"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "0.0.12"
csv = "1"
memchr = "2"
rustc-hash = "2"
mimalloc = "0.1"
tauri-plugin-webserve = { path = "crates/tauri-plugin-webserve", optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[features]
e2e = ["tauri-plugin-webdriver"]
web-serve = ["dep:tauri-plugin-webserve"]

[dependencies.tauri-plugin-webdriver]
version = "0.2"
optional = true

# Forked fix: command signature types render named references instead of inlining
# full type bodies (shallow_inline). github.com/ccmdi/{tauri-specta,specta} (submodules).
[patch.crates-io]
tauri-specta = { path = "crates/tauri-specta" }
specta = { path = "crates/specta/specta" }
specta-macros = { path = "crates/specta/specta-macros" }
specta-typescript = { path = "crates/specta/specta-typescript" }
