[package]
name = "mma-vision"
version = "0.1.0"
edition = "2024"

[features]
default = []
directml = ["ort/directml"]
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ndarray = { version = "0.17", default-features = false }
ort = "2.0.0-rc.12"
rayon = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
