[package]
name = "mma-copyright"
version = "0.1.1"
edition = "2024"

[features]
default = []
directml = ["ort/directml"]
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ndarray = { version = "0.17", default-features = false }
ort = "2.0.0-rc.12"
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
regex = "1"
mimalloc = "0.1"
